--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> Medium Ready </title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="hide"> Hide </div>
